2003-08-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/GNUmakefile.postamble: Invoke Source/DocMakefile to
	clean reference documentation.

2003-08-02  Ludovic Marcotte <ludovic@Sophos.ca

	* Modified NSPopUpButtonCell: -insertItemWithTitle: atIndex:
	  so that we get our item count after removing a potential
	  duplicated item value.


2003-08-01  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.postamble (after-install): Install
	gsdoc docs in proper places.
	* Source/DocMakefile: Add GuiUser DOCUMENT

	* Images/GNUmakefile: Remove obsolete files.

2003-07-31  David Ayers  <d.ayers@inode.at>

	* Created tag 'pre-header-reorg-20030731'.
	
	* Headers/Additions/GNUstepGUI: New directory.
	* Headers/AppKit: Ditto.
	* Headers/gnustep/gui: Obsoleted.

	* Headers/Additions/GNUstepGUI/GMAppKit.h: Moved here from
	Headers/gnustep/gui.
	* Headers/Additions/GNUstepGUI/GMArchiver.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSDisplayServer.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSFontInfo.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSFusedSilica.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSHbox.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSHelpManagerPanel.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSHorizontalTypesetter.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSInfoPanel.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSLayoutManager.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSLayoutManager_internal.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSMemoryPanel.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSMethodTable.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSNibTemplates.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSPasteboardServer.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSServicesManager.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSTable.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSTextConverter.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSTrackingRect.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSTypesetter.h: Ditto.
	* Headers/Additions/GNUstepGUI/GSVbox.h: Ditto.