@@ -1,3 +1,13 @@
+2003-08-10 23:27  Alexander Malmberg <alexander@malmberg.org>
+
+	* Headers/Additions/GNUstepGUI/GSFontInfo.h: Add new methods in
+	GSFontEnumerator that return the default names of some standard
+	fonts.
+
+	* Source/GSFontInfo.m: Implement them.
+
+	* Source/NSFont.m: Use them.
+
 2003-08-07  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Documentation/GNUmakefile.postamble: Invoke Source/DocMakefile to
